--- a/src/assets/scss/abstracts/functions/_functions.scss
+++ b/src/assets/scss/abstracts/functions/_functions.scss
@@ -3,6 +3,8 @@
 // =====================================================
 
 @import 'math';
+@import 'utility';
 @import 'color-contrast';
 @import 'svg-encode';
 @import 'responsive-font-size';
+@import 'transition';
