--- a/src/assets/scss/abstracts/mixins/_mixins.scss
+++ b/src/assets/scss/abstracts/mixins/_mixins.scss
@@ -5,6 +5,6 @@
 @import 'media-queries';
 @import 'typography';
 @import 'buttons';
-@import 'transitions';
+@import 'animations';
 @import 'utilities';
 @import 'icons';
