--- a/src/assets/scss/abstracts/variables/_buttons.scss
+++ b/src/assets/scss/abstracts/variables/_buttons.scss
@@ -7,8 +7,8 @@ $button-padding-x: $button-padding-y * 2 !default;
 $button-background-color: transparent !default;
 $button-color: $body-color !default;
 $button-border-width: 1px !default;
-$button-border: $button-border-width solid transparent !default;
-$button-border-radius: $base-border-radius !default;
+$button-border-color: transparent !default;
+$button-border-radius: 0.25rem !default;
 $button-font-size: $body-font-size !default;
 $button-font-weight: $font-weight-medium !default;
 $button-line-height: $body-line-height !default;
