--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -4,7 +4,7 @@
 
 @import 'reset/reset';
 @import 'fonts/fonts';
-@import 'typography/typography';
+@import 'typography';
 @import 'images';
 @import 'tables';
 @import 'buttons';
