--- a/src/assets/scss/abstracts/mixins/_utilities.scss
+++ b/src/assets/scss/abstracts/mixins/_utilities.scss
@@ -12,16 +12,28 @@
             $properties: append((), $properties);
         }
 
-        $property-class: if(map-has-key($utility, class), map-get($utility, class), nth($properties, 1));
-        $property-class-modifier: '-' + $key;
+        $class: if(map-has-key($utility, class), map-get($utility, class), nth($properties, 1));
+        $class-modifier: -#{$key};
 
         @if $value != null {
-            .#{$property-class}#{$infix}#{$property-class-modifier} {
+            .#{$class}#{$infix}#{$class-modifier} {
                 @each $property in $properties {
                     #{$property}: $value !important;
                 }
             }
         }
+    }
+}
+
+@mixin desktop-only {
+    @include mb-down(md) {
+        display: none !important;
+    }
+}
+
+@mixin mobile-only {
+    @include mb-up(md) {
+        display: none !important;
     }
 }
 
