--- a/src/assets/scss/abstracts/variables/_images.scss
+++ b/src/assets/scss/abstracts/variables/_images.scss
@@ -2,7 +2,10 @@
 // Images
 // =====================================================
 
+// Figure
 $figure-margin: 0 0 1rem !default;
 
+// Figcaption
+$figcaption-margin-top: 0.5rem !default;
 $figcaption-color: $gray-700 !default;
 $figcaption-font-size: $small-font-size !default;
