--- a/src/assets/scss/abstracts/variables/_tables.scss
+++ b/src/assets/scss/abstracts/variables/_tables.scss
@@ -3,10 +3,19 @@
 // =====================================================
 
 $table-margin-bottom: 1rem !default;
-$table-border: 1px solid $gray-300 !default;
-$table-stripped-background-color: $gray-200 !default;
-
-$table-cell-padding: 0.5rem !default;
-
 $table-caption-side: bottom !default;
+
+// Table cell
+$table-cell-padding: 0.5rem !default;
+$table-cell-border-bottom-width: 1px !default;
+$table-cell-border-bottom: $table-cell-border-bottom-width solid $gray-300 !default;
+
+// Table caption
+$table-caption-padding: 0.5rem 0 !default;
 $table-caption-color: $gray-700 !default;
+
+// Table group divider
+$table-group-divider-border-bottom: $table-cell-border-bottom-width * 2 solid currentColor !default;
+
+// Table stripped
+$table-stripped-background-color: $gray-200 !default;
