--- a/src/assets/scss/base/_forms.scss
+++ b/src/assets/scss/base/_forms.scss
@@ -6,7 +6,7 @@ label {
     &.is-required {
         &::after {
             content: ' *';
-            color: $danger;
+            color: $error;
         }
     }
 }
