--- a/src/assets/scss/base/reset/_forms.scss
+++ b/src/assets/scss/base/reset/_forms.scss
@@ -60,7 +60,8 @@ input {
         margin: $checkbox-margin;
 
         &:checked {
-            background: $checkbox-checked-background-color url($checkbox-checked-background-image);
+            background: $checkbox-checked-background;
+            border-color: $checkbox-checked-border-color;
         }
     }
 
@@ -71,7 +72,8 @@ input {
         border-radius: 50%;
 
         &:checked {
-            background: $radio-checked-background-color url($radio-checked-background-image);
+            background: $radio-checked-background;
+            border-color: $radio-checked-border-color;
         }
     }
 }
@@ -93,7 +95,7 @@ textarea {
 select {
     @extend %form-field;
     padding-right: $select-padding-right;
-    background: $input-background-color url($select-background-image) no-repeat right $input-padding-x center;
+    background: $select-background;
     background-size: $select-background-size;
 }
 
@@ -148,55 +150,56 @@ select {
     text-transform: none;
 }
 
+// Button
+// =====================================================
 // 1. Correct the inability to style clickable types in iOS and Safari
+// 2. Remove the inner border and padding in Firefox
+// 3. Restore the focus styles unset by the previous rule
 
 button,
 [type='button'],
 [type='reset'],
 [type='submit'] {
     appearance: button; // 1
+
+    &::-moz-focus-inner {
+        padding: 0; // 2
+        border-style: none; // 2
+    }
+
+    &:-moz-focusring {
+        outline: 1px dotted ButtonText; // 3
+    }
 }
 
-// Remove the inner border and padding in Firefox
-
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-// Restore the focus styles unset by the previous rule
-
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
-    outline: 1px dotted ButtonText;
-}
-
+// Input number
+// =====================================================
 // Correct the cursor style of increment and decrement buttons in Chrome
 
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-    height: auto;
+[type='number'] {
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+        height: auto;
+    }
 }
 
+// Input search
+// =====================================================
 // 1. Correct the odd appearance in Chrome and Safari
 // 2. Correct the outline style in Safari
+// 3. Remove the inner padding in Chrome and Safari on macOS
 
 [type='search'] {
     appearance: textfield; // 1
     outline-offset: -2px; // 2
+
+    &::-webkit-search-decoration {
+        appearance: none; // 3
+    }
 }
 
-// Remove the inner padding in Chrome and Safari on macOS
-
-[type='search']::-webkit-search-decoration {
-    appearance: none;
-}
-
+// Input file
+// =====================================================
 // 1. Correct the inability to style clickable types in iOS and Safari
 // 2. Change font properties to `inherit` in Safari
 
