--- a/src/assets/scss/base/reset/_reset.scss
+++ b/src/assets/scss/base/reset/_reset.scss
@@ -7,9 +7,8 @@
 
 @import 'root';
 @import 'document';
-@import 'grouping-content';
 @import 'typography';
-@import 'embedded-content';
+@import 'images';
 @import 'tables';
 @import 'forms';
 @import 'interactive';
