--- a/src/assets/scss/layout/_container.scss
+++ b/src/assets/scss/layout/_container.scss
@@ -5,7 +5,8 @@
 .container {
     width: 100%;
     max-width: $container-max-width;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: $container-padding-x;
     padding-right: $container-padding-x;
 
